Fix voting count issue. Some spacing between votes and answer

--- a/RWAT/Content/Site.css
+++ b/RWAT/Content/Site.css
@@ -123,7 +123,10 @@
 }
 
 #questiondescription {
-    height:auto;margin-right: 5px; display: inline-block;word-wrap: break-word;
+    height: auto;
+    margin-left: 10px;
+    display: inline-block;
+    word-wrap: break-word;
 }
 
 .questionanswerpanel{
@@ -162,7 +165,11 @@
 }
 
 .answerbody {
-    height:auto;margin-right: 35px;padding-right: 10px; display: inline-block;word-wrap: break-word;
+    height: auto;
+    margin-left: 10px;
+    padding-right: 10px;
+    display: inline-block;
+    word-wrap: break-word;
 }
 
 .voteimages {
